# pi-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-03-phase1-sdk.md  2026-07-03-phase2-tui.md  2026-07-04-phase3-pi-tui-port.md  2026-07-05-phase4-footer.md  2026-07-05-phase4-selfcontained-commands.md
docs/superpowers/specs/: 2026-07-03-phase2-tui-design.md  2026-07-03-pi-python-phase1-sdk-design.md  2026-07-04-phase3-pi-tui-port-design.md  2026-07-05-phase4-footer-design.md  2026-07-05-phase4-selfcontained-commands-design.md
examples/: fix_failing_test.py
examples/sample_repo/: calc.py  test_calc.py
src/pipython/: __init__.py  config.py  session_facade.py  testing.py
src/pipython/agent/: agent.py  events.py  loop.py
src/pipython/ai/: client.py  models.py  types.py
src/pipython/session/: ids.py  (+3 more)
tests/: test_fake_client.py  test_package.py  test_session_facade.py
tests/agent/: test_events.py  test_loop.py
tests/ai/: test_client_conversion.py  test_client_stream.py  test_types.py
tests/e2e/: test_tui_tmux.py  test_tui_tmux_engine.py  tmux_util.py
tests/fixtures/: pi_v3_sample.jsonl
tests/session/: test_compaction.py  test_ids.py  test_pi_compat.py  test_store.py  test_tree.py
tests/tools/: test_base.py  test_bash.py  test_edit.py  test_grep_find.py  test_read_write_ls.py  test_registry.py
tests/tui/: test_app.py  test_app2.py  test_app_helpers.py  test_commands.py  test_commands_selfcontained.py  test_commands_sink.py  test_completers.py  test_entry.py  test_render.py
(+77 files in other folders)
