[project]
name = "pi-python"
version = "0.1.0"
description = "Python port of pi (earendil-works/pi) — a minimal coding agent harness. Phase 1: embeddable agent SDK."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "litellm==1.90.2",
    "pydantic==2.13.4",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff", "pyright"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipython"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # 桶装重导出

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
